# website

./: .nojekyll  README.md  _quarto.yml  contact.html  contact.qmd  events.html  events.qmd  index.html  index.qmd  people.html  people.qmd  pyproject.toml  references.bib  references.csv  requirements.txt  research.html  research.qmd  robots.txt  search.json  sitemap.xml  small_logo_new.kra  small_website.yml  workflow  workflow.md
events/2018-sujinho/: index.html  index.qmd
events/2019-semester/: index.html  index.qmd
events/2025-small/: index.html  index.qmd
people/: alumni.yaml  collaborators.yaml  faculty.yaml  students.yaml
site_libs/bootstrap/: bootstrap-b8c017db10e5bcb750516e0e67ee528b.min.css
