[project]
name = "small-website"
version = "0.1.0"
description = ""
authors = [
    {name = "thiagorr162",email = "thiagorr162@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
